# iptv-checker-rs

./: .deepsource.toml  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  dockerfile  replace.json  search.json  translate.txt
.cursor/rules/: rust.mdc
.github/workflows/: rust.yaml  rust.yml
openspec/: config.yaml  project.md
openspec/changes/archive/2026-03-27-epg-channel-list/: README.md  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-27-epg-channel-list/specs/epg-data-management/: spec.md
openspec/changes/archive/2026-03-27-epg-delete-cache/: README.md  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-27-epg-delete-cache/specs/epg-data-management/: spec.md
openspec/changes/archive/2026-03-27-epg-sources-status/: README.md  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-27-epg-sources-status/specs/epg-data-management/: spec.md
openspec/changes/archive/2026-03-28-epg-cache-normalization/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-28-epg-cache-normalization/specs/epg-cache-normalization/: spec.md
openspec/changes/archive/2026-03-28-epg-cache-normalization/specs/epg-data-management/: spec.md
openspec/changes/archive/2026-03-28-epg-info-api/: README.md  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-28-epg-info-api/specs/epg-export/: spec.md
openspec/changes/archive/2026-03-28-epg-mapping-config/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-28-epg-mapping-config/specs/epg-mapping/: spec.md
openspec/changes/archive/2026-03-28-epg-mapping-config/specs/m3u-tvg-id-matching/: spec.md
openspec/specs/epg-data-management/: spec.md
openspec/specs/epg-export/: spec.md
openspec/specs/epg-mapping/: spec.md
openspec/specs/m3u-tvg-id-matching/: spec.md
src/: epg_mapping.rs  epg_xml.rs  live.rs  main.rs  middleware.rs  search.rs  utils.rs  web.rs
src/assets/: epg_mapping.json
src/common/: check.rs  cmd.rs  favourite.rs  m3u.rs  mod.rs  replace.rs  task.rs  translate.rs  util.rs
src/config/: base.rs  config.rs  epg.rs  favourite.rs  global.rs  logos.rs  mod.rs  replace.rs  search.rs  task.rs
src/const/: constant.rs
src/middleware/: middleware.rs
web/: index.html
web/assets/: check-task.4ddbd6c0.js  index--DEZQ7tr.js  index-1rgDPz7x.js  index-6gA8TfdC.js  index-B4wxpVJn.js  index-B6QPs3ul.js  index-BESD-cJg.js  index-BNIc2SzP.js  index-BNjUFwJT.js  index-BNv3apjX.js  index-BdHKfTsl.js  index-BgI2dsF8.css  index-BkcX0inZ.js  index-BpPe4Kif.js  index-Bpzso3pA.js  index-BwrdzBFP.js  index-CL5mzMQE.js  index-CN8YLxvd.js  index-Ceqg0QTf.js  index-Citw1Fhj.js  index-CqaxL1pN.js  index-Cr3ipIsx.js  index-Cy4U3Lda.js  index-D62aX61y.js  index-DXjcdzsw.js  index-Kr_Wbnht.js  index-LhO8ABr6.js  index-Lx-vEaZY.js  index-Qu3Pe5e5.js  index-VPXlP7_p.js  index-Y2VQtw3C.js  index-fS6xKJvl.js  index-frxoaMnh.js  index-kr_lOHxj.css  index-lTh6SHsy.js  index-m39jlLFV.js  index-wN_Wicj3.js  index-x0nxR1UY.js  index-zlvWHxVy.js  index.23de712b.js  (+17 more)
