[package]
name = "iptv-checker-rs"
version = "4.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.9.0"
actix-web = { version = "4.4.1", default-features = false, features = ["macros", "compress-gzip", "compress-brotli"] }
actix-files = "0.6.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
reqwest = "0.11.22"
chrono = "0.4.31"
openssl = { version = "0.10.61", features = ["vendored"] }
clap = { version = "4.4.11", features = ["derive"] }
time = "0.3.30"
tokio = "1.35.0"
nix = "0.27.1"
log = "0.4.20"
url = "2.5.0"
rand = "0.8"
crossbeam-channel = "0.5"
threadpool = "1.8.1"
tempfile = "3.9.0"
uuid = { version = "0.8", features = ["v4"] }
md5 = "0.7.0"
clokwerk = { version = "0.3.5" }
actix-multipart = "0.6.1"

[target.'cfg(windows)'.dependencies]
# 只在Windows平台上使用的依赖项

[target.'cfg(not(windows))'.dependencies]
# 只在非Windows平台上使用的依赖项