[package]
name = "iptv-checker-rs"
version = "4.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
actix-rt = "2.9.0"
actix-web = { version = "4.4.1", default-features = false, features = ["macros", "compress-gzip", "compress-brotli"] }
actix-files = "0.6.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
reqwest = "0.12.12"
chrono = "0.4.31"
clap = { version = "4.4.11", features = ["derive"] }
tokio = { version = "1.35.0", features = ["full", "macros"] }
log = "0.4.20"
url = "2.5.0"
rand = "0.9.0"
tempfile = "3.9.0"
uuid = { version = "1.15.1", features = ["v4"] }
md5 = "0.7.0"
clokwerk = { version = "0.4.0" }
actix-multipart = "0.7.2"
lazy_static = "1.5.0"
simplelog = "0.6"
once_cell = "1.21.3"
zip = "0.6"
walkdir = "2.5"

[target.'cfg(windows)'.dependencies]
# 只在Windows平台上使用的依赖项

[target.'cfg(not(windows))'.dependencies]
# 只在非Windows平台上使用的依赖项